services/queue-manager/k8s/queue-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-manager
  namespace: stf
  labels:
    app: queue-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-manager
  template:
    metadata:
      labels:
        app: queue-manager
    spec:
      containers:
        - name: queue-manager
          image: registry.dmz.home/kinga/stream-forge/queue-manager:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: kafka-ca-volume
              mountPath: /usr/local/share/ca-certificates/ca.crt
              subPath: dev-ca.crt
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: kafka-ca-volume
          configMap:
            name: dev-ca-certificates

---

apiVersion: v1
kind: Service
metadata:
  name: queue-manager-svc
  namespace: stf
spec:
  selector:
    app: queue-manager
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
